# pocketclaw-rs

./: .gitignore  Cargo.toml  README.md  build_android.sh
.github/workflows/: ci.yml  release.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/phoneclaw/app/: MainActivity.kt  PhoneClawAccessibilityService.kt  PhoneClawService.kt  RustBridge.kt  SetupActivity.kt  SetupWizardActivity.kt
android/app/src/main/java/com/phoneclaw/app/wave/: AppConfigStore.kt  ChannelChatSetupActivity.kt  ControllerDashboardActivity.kt  GatewayClient.kt  ModelCatalog.kt  ProviderSecretsActivity.kt  ResourceMonitorActivity.kt  SafetySandboxActivity.kt  SessionLiveActivity.kt  SkillsPermissionsActivity.kt  UiFactory.kt  WorkspaceCreatorActivity.kt
android/app/src/main/java/com/pocketclaw/app/: MainActivity.kt  PocketClawAccessibilityService.kt  PocketClawService.kt  RustBridge.kt  SetupActivity.kt  SetupWizardActivity.kt
android/app/src/main/java/com/pocketclaw/app/wave/: AppConfigStore.kt  ChannelChatSetupActivity.kt  ControllerDashboardActivity.kt  GatewayClient.kt  ModelCatalog.kt  ProviderSecretsActivity.kt  ResourceMonitorActivity.kt  SafetySandboxActivity.kt  SessionLiveActivity.kt  SkillsPermissionsActivity.kt  UiFactory.kt  WorkspaceCreatorActivity.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
app/: build.gradle.kts
app/src/main/java/com/zeroclaw/android/service/: ZeroClawDaemonService.kt
crates/agent/: Cargo.toml
crates/agent/src/: agent_loop.rs  context.rs  lib.rs  session.rs  sheets.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  onboard.rs  verify.rs
crates/core/: Cargo.toml
crates/core/src/: attachment.rs  audit.rs  bus.rs  channel.rs  config.rs  lib.rs  metrics.rs  permissions.rs  secrets.rs  types.rs
crates/cron/: Cargo.toml
crates/cron/src/: lib.rs
crates/discord/: Cargo.toml
crates/discord/src/: lib.rs
crates/googlechat/: Cargo.toml
crates/googlechat/src/: lib.rs
crates/heartbeat/: Cargo.toml
crates/heartbeat/src/: lib.rs
crates/mobile-jni/: Cargo.toml
crates/mobile-jni/src/: lib.rs
crates/persistence/: Cargo.toml
crates/persistence/migrations/: 20240523000000_initial.sql
crates/persistence/src/: lib.rs
crates/providers/: Cargo.toml
crates/providers/src/: anthropic.rs  factory.rs  google.rs  lib.rs  openai.rs  reliable.rs
crates/server/: Cargo.toml
crates/server/src/: gateway.rs
crates/skills/: Cargo.toml
crates/skills/src/: lib.rs
crates/slack/: Cargo.toml
crates/slack/src/: lib.rs
crates/supervisor/: Cargo.toml
crates/supervisor/src/: main.rs
crates/teams/: Cargo.toml
crates/teams/src/: lib.rs
crates/telegram/: Cargo.toml
crates/telegram/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: android_tools.rs  cron_tools.rs  exec_tool.rs  lib.rs  platform_tools.rs  registry.rs  sandbox.rs  sessions_tools.rs  web_fetch.rs  web_search.rs
crates/voice/: Cargo.toml
crates/whatsapp/: Cargo.toml
crates/whatsapp/src/: lib.rs
crates/zalo/: Cargo.toml
crates/zalo/src/: lib.rs
docs/: p0_p1_android_first.md  system_skill.toml
skills/android_nav/: SKILL.md
skills/github/: README.md
skills/healthcheck/: README.md
skills/session-logs/: README.md
skills/summarize/: README.md
skills/weather/: README.md
