[workspace]
members = [
    "crates/*",
    "crates/telegram",
    "crates/discord",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Picoclaw Contributors"]
license = "MIT"

[profile.release]
opt-level = "s"      # Optimize for size (but less aggressive than "z")
lto = true           # Link Time Optimization
codegen-units = 1    # Reduce parallel codegen for better optimization
strip = true         # Strip symbols
debug = false        # No debug info

[workspace.dependencies]
# Local crates
microclaw-core = { path = "crates/core" }
microclaw-agent = { path = "crates/agent" }
microclaw-providers = { path = "crates/providers" }
microclaw-tools = { path = "crates/tools" }
microclaw-skills = { path = "crates/skills" }
microclaw-server = { path = "crates/server" }
microclaw-cli = { path = "crates/cli" }
microclaw-cron = { path = "crates/cron" }
microclaw-voice = { path = "crates/voice" }
microclaw-heartbeat = { path = "crates/heartbeat" }

# Async Runtime
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "net", "signal", "time", "sync"] } # Minimal features
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] } # Minimal features

# HTTP (optimized for size)
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "stream", "multipart"] }
axum = { version = "0.7", default-features = false, features = ["http1", "json", "matched-path", "tokio"] } # Minimal features

# Utils
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
walkdir = "2.4"
regex = "1.10"
futures = "0.3"
