[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Picoclaw Contributors"]
license = "MIT"

[profile.release]
opt-level = "s"      # Optimize for size (but less aggressive than "z")
lto = true           # Link Time Optimization
codegen-units = 1    # Reduce parallel codegen for better optimization
strip = true         # Strip symbols
debug = false        # No debug info

[workspace.dependencies]
# Local crates
pocketclaw-core = { path = "crates/core" }
pocketclaw-agent = { path = "crates/agent" }
pocketclaw-providers = { path = "crates/providers" }
pocketclaw-tools = { path = "crates/tools" }
pocketclaw-skills = { path = "crates/skills" }
pocketclaw-server = { path = "crates/server" }
pocketclaw-cli = { path = "crates/cli" }
pocketclaw-cron = { path = "crates/cron" }
pocketclaw-voice = { path = "crates/voice" }
pocketclaw-heartbeat = { path = "crates/heartbeat" }
pocketclaw-persistence = { path = "crates/persistence" }
pocketclaw-telegram = { path = "crates/telegram" }
pocketclaw-discord = { path = "crates/discord" }
pocketclaw-supervisor = { path = "crates/supervisor" }

# Async Runtime
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "net", "signal", "time", "sync"] } # Minimal features
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] } # Minimal features

# HTTP (optimized for size)
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "stream", "multipart"] }
axum = { version = "0.7", default-features = false, features = ["http1", "json", "matched-path", "tokio", "multipart"] } # Minimal features

# Utils
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
walkdir = "2.4"
regex = "1.10"
futures = "0.3"
infer = "0.15"
