[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Picoclaw Contributors"]
license = "MIT"

[profile.release]
opt-level = "s"      # Optimize for size (but less aggressive than "z")
lto = true           # Link Time Optimization
codegen-units = 1    # Reduce parallel codegen for better optimization
strip = true         # Strip symbols
debug = false        # No debug info

[workspace.dependencies]
# Local crates
phoneclaw-core = { path = "crates/core" }
phoneclaw-agent = { path = "crates/agent" }
phoneclaw-providers = { path = "crates/providers" }
phoneclaw-tools = { path = "crates/tools" }
phoneclaw-skills = { path = "crates/skills" }
phoneclaw-server = { path = "crates/server" }
phoneclaw-cli = { path = "crates/cli" }
phoneclaw-cron = { path = "crates/cron" }
phoneclaw-voice = { path = "crates/voice" }
phoneclaw-heartbeat = { path = "crates/heartbeat" }
phoneclaw-persistence = { path = "crates/persistence" }
phoneclaw-telegram = { path = "crates/telegram" }
phoneclaw-discord = { path = "crates/discord" }
phoneclaw-whatsapp = { path = "crates/whatsapp" }
phoneclaw-slack = { path = "crates/slack" }
phoneclaw-teams = { path = "crates/teams" }
phoneclaw-zalo = { path = "crates/zalo" }
phoneclaw-googlechat = { path = "crates/googlechat" }
phoneclaw-supervisor = { path = "crates/supervisor" }

# Async Runtime
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "net", "signal", "time", "sync"] } # Minimal features
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] } # Minimal features

# HTTP (optimized for size)
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "stream", "multipart"] }
axum = { version = "0.7", default-features = false, features = ["http1", "json", "matched-path", "tokio", "multipart", "ws", "query"] } # Minimal features

# Utils
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
walkdir = "2.4"
regex = "1.10"
futures = "0.3"
infer = "0.15"
base64 = "0.21"
