[package]
name = "pocketclaw-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pocketclaw-core = { workspace = true }
pocketclaw-agent = { workspace = true }
pocketclaw-server = { workspace = true }
pocketclaw-voice = { workspace = true }
pocketclaw-cron = { workspace = true }
pocketclaw-heartbeat = { workspace = true }
pocketclaw-persistence = { workspace = true }
pocketclaw-providers = { workspace = true }
pocketclaw-tools = { workspace = true }
pocketclaw-telegram = { workspace = true }
pocketclaw-discord = { workspace = true }
pocketclaw-whatsapp = { workspace = true }
pocketclaw-slack = { workspace = true }
pocketclaw-teams = { workspace = true }
pocketclaw-zalo = { workspace = true }
pocketclaw-googlechat = { workspace = true }
anyhow.workspace = true
tokio.workspace = true
clap = { version = "4.4", features = ["derive"] }
inquire = "0.9.3"
dirs = "6.0.0"
serde_json.workspace = true
reqwest = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
async-trait = { workspace = true }
