[package]
name = "phoneclaw-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
phoneclaw-core = { workspace = true }
phoneclaw-agent = { workspace = true }
phoneclaw-server = { workspace = true }
phoneclaw-voice = { workspace = true }
phoneclaw-cron = { workspace = true }
phoneclaw-heartbeat = { workspace = true }
phoneclaw-persistence = { workspace = true }
phoneclaw-providers = { workspace = true }
phoneclaw-tools = { workspace = true }
phoneclaw-telegram = { workspace = true }
phoneclaw-discord = { workspace = true }
phoneclaw-whatsapp = { workspace = true }
phoneclaw-slack = { workspace = true }
phoneclaw-teams = { workspace = true }
phoneclaw-zalo = { workspace = true }
phoneclaw-googlechat = { workspace = true }
anyhow.workspace = true
tokio.workspace = true
clap = { version = "4.4", features = ["derive"] }
inquire = "0.9.3"
dirs = "6.0.0"
serde_json.workspace = true
reqwest = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
async-trait = { workspace = true }
