[package]
name = "phoneclaw-heartbeat"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
phoneclaw-core = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
