[package]
name = "persistence"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pocketclaw-core = { path = "../core" }
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["serde", "v4"] }

[dependencies.sqlx]
version = "0.7"
features = [
    "sqlite",
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
    "json"
]
