[package]
name = "phoneclaw-providers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
phoneclaw-core = { workspace = true }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
