[package]
name = "phoneclaw-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
phoneclaw-core = { workspace = true }
phoneclaw-agent = { workspace = true }
phoneclaw-persistence = { workspace = true }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
axum.workspace = true
uuid.workspace = true
infer.workspace = true
hmac = "0.12"
sha2 = "0.10"
