[package]
name = "phoneclaw-skills"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
phoneclaw-core = { workspace = true }
phoneclaw-tools = { workspace = true }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
walkdir.workspace = true
regex.workspace = true
which = "8.0.0"
toml = "0.8"
