[package]
name = "phoneclaw-teams"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
phoneclaw-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
