[package]
name = "pocketclaw-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pocketclaw-core = { workspace = true }
pocketclaw-cron = { path = "../cron" }
pocketclaw-persistence = { workspace = true }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
tokio = { workspace = true, features = ["fs", "process", "rt-multi-thread", "net"] }
regex = { workspace = true }
base64 = { workspace = true }
libc = "0.2"
chrono.workspace = true
