[package]
name = "phoneclaw-voice"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
phoneclaw-core = { workspace = true }
reqwest = { workspace = true, features = ["multipart", "stream"] }
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true }
tracing = { workspace = true }
anyhow.workspace = true
